correct accidental css spillover to main clock

--- a/mounts/css/custom.css
+++ b/mounts/css/custom.css
@@ -76,7 +76,7 @@
     font-weight: 300
   }
 
-  .time {    
+  .calendar .time {    
     font-size: .75rem;
   }
 
